28.04.2020
[*] install fixed and decorated
[*] moved queries from index.php to model

27.04.2020
[*] deprecated class contructor call fixed
[*] protection fixed to support mysqli
[*] broken class db_MYSQLi fixed and partially decorated
[*] admin/database use mysqli and decorated

26.04.2020
[+] composer